--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
 <head>
     <meta charset="utf-8" />
     <title>Nom de la page à determiner </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header>
+
+    </header>
+    <div class="navbar">
+        <ul>
+            <li> <a href="index.html"> Home </a></li>
+            <li> <a href="#"> Page 1 </a> </li>
+            <li> <a href="#"> Page 2 </a> </li>
+            <li> <a href="#"> Page 3 </a></li>
+            <li> <a href="#"> Page 4 </a></li>
+        </ul>
+    </div>
 
 </body>
 
