--- a/pageUser.html
+++ b/pageUser.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Nom de la page à determiner </title>
+    <title>Bienvenue </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <header>
-    <h1> Mon site </h1>
-    <h3> Mon sous titre </h3>
+    <h1> Bonjour vous etes connecté ! </h1>
+    <h3> Accedez vos memories dès maintenant</h3>
     <nav>
         <ul>
             <li> <a href="index.html"> Home </a></li>
             <li> <a href="#"> Page 1 </a> </li>
             <li> <a href="#"> Page 2 </a> </li>
-            <li> <a href="pageUser.html"> Page 3 </a></li>
+            <li> <a href="#"> Page 3 </a></li>
             <li> <a href="pageConnexion.html"> Mon compte </a></li>
 
         </ul>
@@ -26,10 +26,9 @@
 <body>
 
     <h3>
-        Trop de chose à ne pas oublier ? </br> Laissez nous vous les retenir à votre place ! </br>
+        Voici vos cartes </br> Laissez nous vous les retenir à votre place ! </br>
     </h3>
-    <div class="favoris">
-
+    <div class="favorisUser">
         <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
@@ -57,7 +56,39 @@
             </div>
         </div>
 
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
     </div>
+
+    <div class="boutonConnexion">
+        <button> <a href="pageConnexion.html"> Cliquez ici pour vous connecter !</a></button>
+    </div>
+
+
 
 </body>
 
