deplacement des fichier html vers vue

--- a/vue/pageInscription.html
+++ b/vue/pageInscription.html
@@ -28,7 +28,7 @@
     <div>
         <p>Vous possedez un compte ? connectez vous <a href="pageInscription.html">en cliquant ici </a> </p>
     </div>
-    <form action="" method="POST">
+    <form action="index.php?controle=inscription&action=inscrire" method="POST">
 
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="floatingInput" name="nom" placeholder="name@example.com">
